# duck

./: CMakeLists.txt  pkg.dck
include/duck/lang/: AST.h  Cursor.h  Error.h  Lexer.h  Parser.h  Token.h
src/lang/: AST.cpp  Cursor.cpp  Error.cpp  Lexer.cpp  Parser.cpp  Token.cpp
